[metadata]
name=obnl

copyright=2017, %(maintainer)s

major=0
minor=3
micro=0
version=%(major)s.%(minor)s.%(micro)s

maintainer=The OBNL Team
maintainer_email=gillian.basso@hevs.ch

url=https://github.com/ppuertocrem/obnl

summary=An open tool for co-simulation

description_file=README.md

licence=Apache License 2.0

keywords=co-simulation,AMQP,MQTT

required=pika,protobuf

classifiers=Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: Apache License 2.0
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Topic :: Scientific/Engineering :: Energy Simulation
